# deskbot-server

./: .gitignore  server.js
firmware/: CMakeLists.txt  FreeRTOSConfig.h  make_sources.sh  setup.sh
firmware/src/: CMakeLists.txt  main.c
firmware/src/components/app/: deskbot_state.c  deskbot_state.h
firmware/src/components/cloud/: cloud_sync.c  cloud_sync.h
firmware/src/components/display/: ili9341.c  ili9341.h
firmware/src/components/pomodoro/: pomodoro.c  pomodoro.h
firmware/src/components/touch/: touch.c  touch.h
firmware/src/components/ui/: deskbot_ui.c  deskbot_ui.h
firmware/src/config/: lwipopts.h
phone-app/src/: style.css
phone-app/src/components/: HelloWorld.vue
server/: package-lock.json  package.json  server.js
server/phone-app/: app.js  index.html  package-lock.json  package.json  vite.config.js
server/phone-app/src/components/: HelloWorld.vue
